# tree

./: .clangd  .gitignore  CMakeLists.txt  JOURNAL.md  README.md  build.sh  environment.yml  input.i  main.py  match-python.sh  setup.sh
blender/: __init__.py  blender_manifest.toml  mesh.py  tree_input.py
blender/parser/: convert.py  parse.py  translate.py  validate.py
blender/scripts/: addon2.py
blender/tree_input/: __init__.py  interaction.py  materials.py  operators.py  utils.py
core/: bindings.cpp  build_mesh.cpp  build_mesh.h  configs.h  driver.cpp  driver.h  interp.cpp  interp.h  mesh.h  read.cpp  read.h
core/integration/: adaptiverk5.h  integrator.h  output.h  stepper.h
parser/: convert.py  lex.py  parse.py  translate.py  validate.py
tests/: adaptiverk5  adaptiverk5_test.cpp  interp_test.cpp
